# digibrain

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  PROTOCOL.md  README.md  enhancement_ideas.md  memory-buffs.md  opencode.md  prefect.yaml  pyproject.toml  requirements.txt  yelp-system-architecture.excalidraw
bot/: agents.py  config.py  main.py  sessions.py
flows/: base.py  consolidate.py  generic.py
memory/episodic/: _template.md
memory/procedural/: _template.md
memory/semantic/: _template.md
scripts/: consolidate.py  forget.py
templates/: base.html  dashboard.html
templates/chat/: index.html  message.html
templates/domains/: detail.html  list.html
templates/fragments/: item_list.html  item_row.html  job_row.html  stats.html
templates/memory/: edit.html  index.html  search.html  view.html
tests/: conftest.py  test_bootstrap.py  test_cli.py  test_detection.py  test_domains.py  test_edge_cases.py  test_gemini_runner.py  test_items.py  test_jobs.py  test_memory_system.py
tools/: gmail.py
tools/applyops/: __main__.py  cli.py  db.py  templates.py  validate.py  web.py
tools/applyops/routes/: __init__.py  chat.py  dashboard.py  domains.py  memory.py
tools/applyops/templates/: resume.typ
